--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,6 @@
+
 {
-    "builds": [
-        {
-            "src": "api/app.py",
-            "use": "@vercel/python"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "api/app.py"
-        }
-    ]
-}
+    "version": 2,
+    "routes": [{ "src": "/(.*)", "dest": "/index.html" }]
+  }
+  
