--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,11 @@
 {
     "version": 2,
     "builds": [
-      { "src": "api/app.py", "use": "@vercel/static-build" },
-      { "src": "api/app.py", "use": "@vercel/node" }
+      { "src": "api/app.py", "use": "@vercel/python" }
     ],
-    "routes": [{ "src": "/(.*)", "dest": "api/app.py" }]
-}
+    "routes": [
+      { "src": "/api/(.*)", "dest": "api/app.py" },
+      { "src": "/(.*)", "dest": "/index.html" }
+    ]
+  }
   
