--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,4 @@
 {
     "version": 2,
-    "builds": [
-      { "src": "api/app.py", "use": "@vercel/python" },
-      { "src": "/(.*)", "use": "@vercel/static" }
-    ],
-    "routes": [
-      { "src": "/api/(.*)", "dest": "api/app.py" },
-      { "src": "/(.*)", "dest": "/index.html" }
-    ]
-  }
-  
+    "routes": [{ "src": "/(.*)", "dest": "api/app.py" }]
+}
