--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "your-flask-app",
     "version": "1.0.0",
     "description": "Your Flask App",
-    "main": "app.py",  
+    "main": "py app.py",  
     "scripts": {
       "start": "python app.py"  
     }
