--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
     "name": "your-flask-app",
     "version": "1.0.0",
     "description": "Your Flask App",
-    "main": "py app.py",  
+    "main": "app.py",  
     "scripts": {
-      "start": "python app.py"  
+      "start": "py app.py"  
     }
 }
